Github issue#767, Specification-App Screen: redesign button alignment for Delete screen/Define screen/Save -- Added the delete button to the new place. It works well, however, the desired behaviour(as mentioned here https://github.com/appirio-tech/connect-app/issues/767#issuecomment-285543113) is not achieved yet. It has some issues with validations which are being handled by 751.

--- a/src/projects/detail/containers/Specification.scss
+++ b/src/projects/detail/containers/Specification.scss
@@ -96,8 +96,10 @@ $title-color: $tc-gray-80;
     }
   }
   /* .dashed-bottom-border */
-  .dashed-bottom-border {
-    border-bottom: 1px dashed #c3c3c8;
+  .app-screen-header {
+    border-bottom: 1px solid #c3c3c8;
+    display: flex;
+    justify-content: space-between;
     padding: 15px 0;
     position: relative;
 
@@ -112,6 +114,11 @@ $title-color: $tc-gray-80;
 
     .project-name {
       font-size: 20px;
+    }
+
+    button.tc-btn-xs {//TODO ideally we should fix it in react-components repo
+      padding-top: 2px;
+      padding-bottom: 2px;
     }
   }
   /* .bottom-border-titles */
